# text2geo

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
tests/: test_geocoder.py
text2geo/: __init__.py  __main__.py  data.py  exceptions.py  geocoder.py
