[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2geo"
version = "0.1.0"
description = "Offline fuzzy geocoder — convert place names to coordinates with zero API limits"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "text2geo contributors"},
]
keywords = ["geocoding", "geonames", "fuzzy", "offline", "coordinates", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Text Processing",
]
dependencies = [
    "pandas>=1.5",
    "rapidfuzz>=3.0",
]

[project.urls]
Homepage = "https://github.com/charonviz/text2geo"
Repository = "https://github.com/charonviz/text2geo"
Issues = "https://github.com/charonviz/text2geo/issues"

[project.scripts]
text2geo = "text2geo.__main__:main"

[tool.setuptools.packages.find]
include = ["text2geo*"]
